name:           HaskellTwitterTest
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         senmenty

executable HaskellTwitterTest
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   twitter-conduit >=0.1 && <0.2,
                   conduit >=1.2 && <1.3,
                   twitter-types >=0.7 && <0.8,
                   text >=1.2 && <1.3,
                   mtl >=2.2 && <2.3,
                   transformers >=0.4 && <0.5,
                   HTTP >=4000.2 && <4000.3,
                   containers >=0.5 && <0.6,
                   authenticate-oauth >=1.5 && <1.6,
                   authenticate >=1.3 && <1.4,
                   http-conduit >=2.1 && <2.2,
                   bytestring >=0.10 && <0.11,
                   lens >=4.7 && <4.8,
                   twitter-types-lens >=0.7 && <0.8,
                   resourcet >=1.1 && <1.2,
                   blaze-html >=0.8 && <0.9
  ghc-options:     -Wall
  other-modules:   
                   TwitterAuth,
                   TwitterInfo,
                   TwitterPipe,
                   TwitterSources,
                   OutputBuilder

test-suite TwitterSuite
  type:            exitcode-stdio-1.0
  main-is:         TwitterSuite.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, tasty > 0.10, tasty-hunit, HUnit, tasty-quickcheck, QuickCheck
  other-modules:   
                  TwitterAuth,
                  TwitterSources,
                  TwitterInfo,
                  TwitterPipe,
                  TwitterPipeTest,
                  OutputBuilder
  hs-source-dirs:  
                  tests,
                  src

